package es.ull.patrones.practica7.Model;

public interface suscriptionObject {
    String getId();
    String checkInformation();
    String getInitialMessage();
}
